--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
   "description": "Tim Thuma's personal website.",
   "icons": [
     {
-      "src": "static/icons/manifest-icon-192.png",
+      "src": "icons/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "static/icons/manifest-icon-512.png",
+      "src": "icons/manifest-icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
